--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -8,7 +8,7 @@
  		
         <!--About me-->
         <div class="title_content">
-            <div class="text_content">brown smith</div>
+            <div class="text_content">maliwan chumpoosan</div>
             <div class="clear"></div>
         </div>
 
@@ -17,28 +17,28 @@
             <li>
                 <i class="glyphicon glyphicon-user"></i>
                 <label>Name</label>
-                <span class="value">Brown Smith</span>
+                <span class="value">Maliwan Chumpoosan</span>
                 <div class="clear"></div>
             </li>
 
             <li>
                 <i class="glyphicon glyphicon-calendar"></i>
                 <label>Date of birth</label>
-                <span class="value">March 18, 1988</span>
+                <span class="value">March 18, 1995</span>
                 <div class="clear"></div>
             </li>
 
             <li> 
                 <i class="glyphicon glyphicon-map-marker"></i>
                 <label>Adress</label>
-                <span class="value">San Francisco , CA</span>
+                <span class="value">Ubon Ratchthani, Thailand</span>
                 <div class="clear"></div>
             </li>
 
             <li>
                 <i class="glyphicon glyphicon-envelope"></i>
                 <label>Email</label>
-                <span class="value">brown.smith@gmail.com</span>
+                <span class="value">maliwan.ccs57@ubru.ac.th</span>
                 <div class="clear"></div>
             </li>
 
